# 3drme

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md
src/: camera.cpp  camera.hpp  main.cpp  node_graph.cpp  node_graph.hpp  nodes.cpp  nodes.hpp  projectdata.cpp  projectdata.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  ui.cpp  ui.hpp  viewport.cpp  viewport.hpp
src/shaders/: main.fsh  taa.fsh  taa.vsh
src/utils/: cereal_glm.hpp
